# oglgame

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/: gl_debug.h
res/shaders/: basic.shader
src/: Assert.cpp  Assert.h  CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
